# LowMemoryMarkdownEditor

./: .gitignore  LICENSE  README.md  meson.build
data/: lmme.css  lmme.gresource.xml
docs/: audit-baseline.md  hardening-cycle-1.md  hardening-cycle-2.md  hardening-results.md  window-callback-boundaries.md
src/: app.c  app.h  autosave.c  autosave.h  config.c  config.h  dialogs.c  dialogs.h  editor.c  editor.h  file_tree.c  file_tree.h  image_insert.c  image_insert.h  main.c  markdown.c  markdown.h  preview.c  preview.h  preview_style.c  preview_style.h  tabs.c  tabs.h  util.c  util.h  window.c  window.h  workspace.c  workspace.h
src/app/: app.c  app.h  app_test.h
src/command/: command.h  command_actions.c  command_actions.h  command_actions_test.h  command_document.c  command_editor.c  command_enabled.c  command_enabled.h  command_file.c  command_handlers.c  command_handlers.h  command_registry.c  command_registry.h  command_shortcuts.c  command_shortcuts.h  command_view.c  command_workspace.c
src/document/: document.c  document.h  document_autosave.c  document_autosave.h  document_autosave_test.h  document_paths.c  document_paths.h  document_persistence.c  document_persistence.h  file_fingerprint.c  file_fingerprint.h  file_io.c  file_io.h  file_monitor.c  file_monitor.h  recovery.c  recovery.h  recovery_test.h  tabs.c  tabs.h  tabs_test.h
src/editor/: editor.c  editor.h  editor_ops.c  editor_ops.h  editor_search.c  editor_search.h  editor_view.c  editor_view.h  markdown.c  markdown.h  preview.c  preview.h  preview_style.c  preview_style.h
src/features/: image_insert.c  image_insert.h  image_insert_test.h
src/infra/: config.c  config.h  dialogs.c  dialogs.h  file_fingerprint.c  file_fingerprint.h  safe_write.c  safe_write.h  safe_write_test.h  util.c  util.h
src/ui/: external_conflict.c  external_conflict.h  file_tree_view.c  file_tree_view.h  file_tree_view_test.h  menu.c  menu.h  search_bar.c  search_bar.h  statusbar.c  statusbar.h  tab_context_menu.c  tab_context_menu.h  toolbar.c  toolbar.h  tree_context_menu.c  tree_context_menu.h  window.c  window.h
src/workspace/: workspace.c  workspace.h  workspace_delete_test.h
tests/: benchmark_main_loop.c  benchmark_preview.c  benchmark_preview_active_line.c  benchmark_safe_write.c  benchmark_tree_refresh.c  meson.build  test_app_lifecycle.c  test_autosave.c  test_command_registry.c  test_config.c  test_dialogs.c  test_document_lifecycle.c  test_document_paths.c  test_file_fingerprint.c  test_file_io.c  test_file_monitor_state.c  test_file_tree_crash_repro.c  test_file_tree_refresh.c  test_image_insert_target.c  test_markdown.c  test_preview_style.c  test_recovery.c  test_safe_write.c  test_search_flow.c  test_util.c  test_workspace.c
